--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                Locations
               </span>
             </a>
             <a href="">
